css: Fix msg text overlapping with icons on narrow widths.
We remove edit, star and emoji icons on narrow widths which are
displayed beside message actions button. There are instead displayed
inside the message actions popover.

Fixes #19759

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -1071,6 +1071,19 @@ td.pointer {
             visibility: visible !important;
         }
     }
+
+    @media (width < $sm_min) {
+        .star_container,
+        .edit_content,
+        .reaction_button {
+            display: none;
+        }
+
+        .actions_hover {
+            float: right;
+            right: 5px;
+        }
+    }
 }
 
 .star {
